add: agregando los get para paises y categorias
